@@ -1,3 +1,6 @@
+eXosip2 (2.2.3)
+	* fix authentication bugs from previous patch.
+	
 eXosip2 (2.2.2)
 	* new version synchronized with osip2
 	* total rewrite of eXosip.
